lab03/02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: tekton-webhook-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec: 
  rules: 
    - host: gitlab.169.51.200.74.nip.io
      http:
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: el-gitlab-event-listener
                port:
                  number: 8080
